fix: cancel HMR in webpack, stretch todo items in small width

--- a/app/assets/sass/layout/_todolist.scss
+++ b/app/assets/sass/layout/_todolist.scss
@@ -3,6 +3,7 @@
 
 /* 主要任务区 */
 .todolist {
+  flex-grow: 1;
   padding: 0 1.5rem;
   overflow-y: auto;
 
